--- a/about-us.htm
+++ b/about-us.htm
@@ -79,7 +79,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a href="/" class="navbar-brand">
-                                                <span>顶级代理服务器</span>
+                                                <span>顶级代理节点</span>
                                             </a>
                     <div class="navbar-buttons">
                         <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle navbar-btn">Menu<i class="pe-7s-menu"></i></button>
@@ -129,16 +129,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-13-clash-node.htm" title="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150472.htm" title="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧">打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
+                        <li class="py-2"><a href="/news/article-152229.htm" title="手机科学上网全攻略：解锁网络自由与安全新境界">手机科学上网全攻略：解锁网络自由与安全新境界</a></li>
+                        <li class="py-2"><a href="/news/article-150126.htm" title="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南">美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南</a></li>
+                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
+                        <li class="py-2"><a href="/news/article-151200.htm" title="突破网络边界：云主机科学上网终极指南与深度解析">突破网络边界：云主机科学上网终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-147673.htm" title="深入探索Clash官方网站：从入门到精通的全方位使用指南">深入探索Clash官方网站：从入门到精通的全方位使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-153329.htm" title="突破网络边界：贴吧自由访问的全方位科学上网指南">突破网络边界：贴吧自由访问的全方位科学上网指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-today-vless-node.htm" title="顶级代理服务器 - 9月17日20.6M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月17日20.6M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-meta-github.htm" title="梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/news/article-147991.htm" title="全面解析蓝灯安卓版：科学上网的便捷之选">全面解析蓝灯安卓版：科学上网的便捷之选</a></li>
-                        <li class="py-2"><a href="/news/article-150909.htm" title="深度解析 Shadowrocket PP 2019：从入门到精通的完整指南">深度解析 Shadowrocket PP 2019：从入门到精通的完整指南</a></li>
                     </ul>
     </div>
 </div>
@@ -150,7 +150,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
