--- a/free-nodes/2025-9-13-node-share-links.htm
+++ b/free-nodes/2025-9-13-node-share-links.htm
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a href="/" class="navbar-brand">
-                                                <span>顶级代理服务器</span>
+                                                <span>顶级代理节点</span>
                                             </a>
                     <div class="navbar-buttons">
                         <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle navbar-btn">Menu<i class="pe-7s-menu"></i></button>
@@ -174,16 +174,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-node-share.htm" title="梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149862.htm" title="解密Clash：从全名解析到精通配置的科学上网指南">解密Clash：从全名解析到精通配置的科学上网指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150472.htm" title="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧">打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151200.htm" title="突破网络边界：云主机科学上网终极指南与深度解析">突破网络边界：云主机科学上网终极指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-149376.htm" title="全面攻克Clash订阅更新失败：从诊断到预防的完整指南">全面攻克Clash订阅更新失败：从诊断到预防的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="顶级代理服务器 - 9月16日20M/S|免费V2ray/SSR/Clash/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月16日20M/S|免费V2ray/SSR/Clash/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-152229.htm" title="手机科学上网全攻略：解锁网络自由与安全新境界">手机科学上网全攻略：解锁网络自由与安全新境界</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-152609.htm" title="突破边界：手机科学上网浏览器全方位使用指南与深度解析">突破边界：手机科学上网浏览器全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐</a></li>
                         <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
-                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
-                        <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-clash-meta-github.htm" title="梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-150909.htm" title="深度解析 Shadowrocket PP 2019：从入门到精通的完整指南">深度解析 Shadowrocket PP 2019：从入门到精通的完整指南</a></li>
                     </ul>
     </div>
 </div>
@@ -195,7 +195,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
