--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -265,16 +265,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
-                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
-                        <li class="py-2"><a href="/news/article-149376.htm" title="全面攻克Clash订阅更新失败：从诊断到预防的完整指南">全面攻克Clash订阅更新失败：从诊断到预防的完整指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-150126.htm" title="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南">美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-20-clash-verge-rev-github.htm" title="梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-today-vless-node.htm" title="顶级代理服务器 - 9月20日22.9M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月20日22.9M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
+                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-11-clash-v2ray-ss-ssr.htm" title="梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月11日19.7M/S|免费V2ray/Clash/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-16-clash-verge-rev-nodes.htm" title="梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-13-clash-node.htm" title="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149862.htm" title="解密Clash：从全名解析到精通配置的科学上网指南">解密Clash：从全名解析到精通配置的科学上网指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-vless-github.htm" title="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐">顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-153329.htm" title="突破网络边界：贴吧自由访问的全方位科学上网指南">突破网络边界：贴吧自由访问的全方位科学上网指南</a></li>
                     </ul>
     </div>
 </div>
@@ -286,7 +286,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -315,7 +315,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                            <p>&copy;2025 Best company</p>
+                                                <p>&copy;2025 Best company</p>
                         </div>
                         <div class="col-md-6">
                             <p class="credit pull-right">
