--- a/date/2025-08/page-2.htm
+++ b/date/2025-08/page-2.htm
@@ -265,16 +265,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149862.htm" title="解密Clash：从全名解析到精通配置的科学上网指南">解密Clash：从全名解析到精通配置的科学上网指南</a></li>
                         <li class="py-2"><a href="/news/article-150472.htm" title="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧">打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-meta-github.htm" title="梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-8-node-share.htm" title="梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-152960.htm" title="爱的碰撞：解码亲密关系中的冲突艺术">爱的碰撞：解码亲密关系中的冲突艺术</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-clash-verge-rev-nodes.htm" title="梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
-                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
+                        <li class="py-2"><a href="/news/article-154786.htm" title="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路">V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-vless-github.htm" title="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐">顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -286,7 +286,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -315,7 +315,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                            <p>&copy;2025 Best company</p>
+                                                <p>&copy;2025 Best company</p>
                         </div>
                         <div class="col-md-6">
                             <p class="credit pull-right">
