--- a/date/2025-09/index.htm
+++ b/date/2025-09/index.htm
@@ -115,6 +115,34 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-22">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-9-22-node-share-links.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 9月22日21.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅机场推荐" src="/uploads/20241210/c8aeca7ec04508d834868d756fa8dda4.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-9-22-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 9月22日21.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、新加坡、欧洲、美国、日本、加拿大、香港等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-21">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-9-21-vless-github.htm" class="xcblog-blog-url">
+                                        <img alt="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐" src="/uploads/20241210/c278b237ca134e76b531b8ac6712b2fd.webp" class="img-responsive">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-9-21-vless-github.htm" class="xcblog-blog-url">
+                                        <h3>
+                                            顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐                                        </h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、加拿大、欧洲、韩国、日本、新加坡、香港等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-20">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-9-20-today-vless-node.htm" class="xcblog-blog-url">
@@ -227,36 +255,8 @@
                                     <p>这一次的节点更新覆盖了韩国、加拿大、新加坡、美国、日本、欧洲、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-12">
-                                <div class="col-md-3">
-                                    <a href="/news/article-155151.htm" class="xcblog-blog-url">
-                                        <img alt="破解网络屏障：谷歌科学上网的全方位指南" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-155151.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            破解网络屏障：谷歌科学上网的全方位指南                                        </h3>
-                                    </a>
-                                    <p>在当今信息时代，谷歌作为全球最大的搜索引擎和服务提供平台，成为许多用户获取知识、信息和资源的重要渠道。然而，在部分地区，由于政策和网络限制，直接访问谷歌服务受到阻碍，这使得“科学上网”成为不可或缺的技</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-11">
-                                <div class="col-md-3">
-                                    <a href="/news/article-154786.htm" class="xcblog-blog-url">
-                                        <img alt="V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路" src="/uploads/20241210/25d7a8c71023bb35536416e48e2d205c.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-154786.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            V2Ray节点选购全攻略：解锁高速稳定安全的网络自由之路                                        </h3>
-                                    </a>
-                                    <p>在信息高度互联的今天，网络自由已成为现代人的基本需求。然而，各种网络限制和审查机制让许多人感到困扰。作为突破网络封锁的利器，V2Ray凭借其强大的技术优势，正成为越来越多用户的首选工具。但如何选择优质</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-09/page-2.htm">2</a></li> <li><a href="/date/2025-09/page-2.htm">&raquo;</a></li></ul>                        </div>
+                            <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-09/page-2.htm">2</a></li><li><a href="/date/2025-09/page-3.htm">3</a></li> <li><a href="/date/2025-09/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -265,16 +265,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149862.htm" title="解密Clash：从全名解析到精通配置的科学上网指南">解密Clash：从全名解析到精通配置的科学上网指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-13-node-share-links.htm" title="顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket/Clash/V2ray订阅机场推荐">顶级代理服务器 - 9月13日20.8M/S|免费SSR/Shadowrocket/Clash/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-node-share.htm" title="梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149376.htm" title="全面攻克Clash订阅更新失败：从诊断到预防的完整指南">全面攻克Clash订阅更新失败：从诊断到预防的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-13-clash-node.htm" title="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-155151.htm" title="破解网络屏障：谷歌科学上网的全方位指南">破解网络屏障：谷歌科学上网的全方位指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-153703.htm" title="手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由">手机Clash免费节点获取与高效使用全攻略：解锁全球网络自由</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-vless-node.htm" title="顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月18日20.1M/S|免费Clash/SSR/V2ray/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-today-vless-node.htm" title="顶级代理服务器 - 9月20日22.9M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月20日22.9M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-5-clash-verge-rev-github.htm" title="梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月5日18.8M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-14-clash-meta-github.htm" title="梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-152609.htm" title="突破边界：手机科学上网浏览器全方位使用指南与深度解析">突破边界：手机科学上网浏览器全方位使用指南与深度解析</a></li>
                     </ul>
     </div>
 </div>
@@ -286,7 +286,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -315,7 +315,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                            <p>&copy;2025 Best company</p>
+                                                <p>&copy;2025 Best company</p>
                         </div>
                         <div class="col-md-6">
                             <p class="credit pull-right">
