--- a/date/2025-09/page-3.htm
+++ b/date/2025-09/page-3.htm
@@ -2,21 +2,21 @@
 <html>
 
 <head>
-        <link rel="canonical" href="https://topproxy.github.io/news/page-3.htm" />
+        <link rel="canonical" href="https://topproxy.github.io" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>顶级代理服务器新闻资讯 - 免费VPN节点与订阅动态 - 顶级代理服务器 免费订阅中文网 - 第2页</title>
-        <meta name="keywords" content="顶级代理服务器, 新闻资讯, VPN节点, VPN订阅, 翻墙工具" />
-        <meta name="description" content="顶级代理服务器新闻资讯，提供最新VPN节点和订阅信息，帮助用户高效安全翻墙。" />
+    <title>2025-09归档 - 第2页 - 顶级代理服务器 免费订阅中文网</title>
+        <meta name="keywords" content="2025-09归档顶级代理服务器 免费订阅中文网" />
+        <meta name="description" content="2025-09归档，当前是第2页" />
         <link rel="icon" href="/assets/website/img/v2raysubscribe/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="顶级代理服务器 免费订阅中文网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://topproxy.github.io/news/page-3.htm" />
+    <meta property="og:url" content="https://topproxy.github.io" />
     <meta property="og:site_name" content="顶级代理服务器 免费订阅中文网" />
-    <meta property="og:title" content="顶级代理服务器新闻资讯 - 免费VPN节点与订阅动态 - 顶级代理服务器 免费订阅中文网 - 第2页" />
+    <meta property="og:title" content="2025-09归档 - 第2页 - 顶级代理服务器 免费订阅中文网" />
     <meta property="og:image" content="/assets/website/img/v2raysubscribe/favicon.ico" />
-        <meta property="og:description" content="顶级代理服务器新闻资讯，提供最新VPN节点和订阅信息，帮助用户高效安全翻墙。" />
+        <meta property="og:description" content="2025-09归档，当前是第2页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -28,7 +28,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="顶级代理服务器新闻资讯 - 免费VPN节点与订阅动态 - 顶级代理服务器 免费订阅中文网 - 第2页">
+    <meta name="apple-mobile-web-app-title" content="2025-09归档 - 第2页 - 顶级代理服务器 免费订阅中文网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -101,9 +101,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1>新闻资讯</h1>
+                        <h1>2025-09 归档</h1>
                         <p class="weight-300">
-                            <a href="/">首页</a> / 新闻资讯                        </p>
+                            <a href="/">首页</a> / 2025-09 归档
+                        </p>
                     </div>
                 </div>
             </div>
@@ -114,50 +115,36 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-23">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-02">
                                 <div class="col-md-3">
-                                    <a href="/news/article-147991.htm" class="xcblog-blog-url">
-                                        <img alt="全面解析蓝灯安卓版：科学上网的便捷之选" src="/uploads/20241210/f53b9e12399528081423c47a3ef36473.webp" class="img-responsive">
+                                    <a href="/news/article-151533.htm" class="xcblog-blog-url">
+                                        <img alt="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验" src="/uploads/20241210/be6eaa28e1f0795d2c157b28e0544cfc.webp" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="col-md-9">
-                                    <a href="/news/article-147991.htm" class="xcblog-blog-url">
+                                    <a href="/news/article-151533.htm" class="xcblog-blog-url">
                                         <h3>
-                                            全面解析蓝灯安卓版：科学上网的便捷之选                                        </h3>
+                                            Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验                                        </h3>
                                     </a>
-                                    <p>在当今数字时代，互联网已成为人们获取信息、交流思想的重要渠道。然而，由于各种原因，某些网站和服务在某些地区可能无法直接访问。为了突破这些限制，许多用户选择使用科学上网工具，而蓝灯（Lantern）凭借</p>
+                                    <p>在当今信息高速流通的互联网时代，科学上网成为越来越多用户的刚需。特别是在某些网络环境受限的地区，访问国际网站、使用国外服务常常面临阻碍。作为应对这种限制的利器之一，Kali科学上网浏览器凭借其强大的功</p>
                                 </div>
                             </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-22">
+                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-09-01">
                                 <div class="col-md-3">
-                                    <a href="/news/article-147673.htm" class="xcblog-blog-url">
-                                        <img alt="深入探索Clash官方网站：从入门到精通的全方位使用指南" src="/uploads/20241210/6e11f7f57f20340ae4a1af340dad7851.webp" class="img-responsive">
+                                    <a href="/news/article-151200.htm" class="xcblog-blog-url">
+                                        <img alt="突破网络边界：云主机科学上网终极指南与深度解析" src="/uploads/20241210/4dabb136cc879161edd380c9f5160f0f.webp" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="col-md-9">
-                                    <a href="/news/article-147673.htm" class="xcblog-blog-url">
+                                    <a href="/news/article-151200.htm" class="xcblog-blog-url">
                                         <h3>
-                                            深入探索Clash官方网站：从入门到精通的全方位使用指南                                        </h3>
+                                            突破网络边界：云主机科学上网终极指南与深度解析                                        </h3>
                                     </a>
-                                    <p>引言：互联网时代的隐私守护者  在信息爆炸的今天，网络已成为我们生活中不可或缺的一部分。然而，随之而来的网络安全威胁和隐私泄露问题也日益严峻。据统计，全球每年因网络攻击造成的经济损失高达数万亿美元。在</p>
-                                </div>
-                            </div>
-                                                        <div class="row text-center-mobile item xcblog-blog-item" data-date="2025-08-21">
-                                <div class="col-md-3">
-                                    <a href="/news/article-147422.htm" class="xcblog-blog-url">
-                                        <img alt="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧" src="/uploads/20241210/8a6a1f3dd48451d20f1ffdfa167c468a.webp" class="img-responsive">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/news/article-147422.htm" class="xcblog-blog-url">
-                                        <h3>
-                                            水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧                                        </h3>
-                                    </a>
-                                    <p>引言：被忽视的水下战争  当人们凝视波光粼粼的水面时，很少意识到水下正上演着比陆地更古老的生存戏剧。鱼类——这些演化历史超过5亿年的古老生物，通过鳞片间的碰撞、色彩信号的博弈以及精妙的社会策略，构建了</p>
+                                    <p>引言：当围墙遇见云端  在这个信息即权力的时代，全球互联网却日益呈现"巴尔干化"趋势。据最新《全球互联网自由度报告》显示，超过40个国家存在明显的网络审查现象，而中国"防火长城"（GFW）更被视为世界</p>
                                 </div>
                             </div>
                             
-                            <ul class="pagination"><li><a href="/news/page-2.htm">&laquo;</a></li> <li><a href="/news/">1</a></li><li><a href="/news/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                        </div>
+                            <ul class="pagination"><li><a href="/date/2025-09/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-09/">1</a></li><li><a href="/date/2025-09/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -166,16 +153,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-today-vless-node.htm" title="顶级代理服务器 - 9月17日20.6M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐">顶级代理服务器 - 9月17日20.6M/S|免费Clash/Shadowrocket/SSR/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-vless-github.htm" title="顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐">顶级代理服务器 - 9月21日23M/S|免费SSR/Clash/Shadowrocket/V2ray订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-14-clash-meta-github.htm" title="梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月14日20.9M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-meta-github.htm" title="梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-clash-stash-node.htm" title="梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-node-share-links.htm" title="顶级代理服务器 - 9月22日21.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅机场推荐">顶级代理服务器 - 9月22日21.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149376.htm" title="全面攻克Clash订阅更新失败：从诊断到预防的完整指南">全面攻克Clash订阅更新失败：从诊断到预防的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-20-clash-verge-rev-github.htm" title="梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-13-clash-node.htm" title="梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月13日18.1M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
