--- a/free-nodes/2025-9-16-free-node-subscribe.htm
+++ b/free-nodes/2025-9-16-free-node-subscribe.htm
@@ -171,16 +171,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-19-clash-node.htm" title="梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月19日22.9M/S|免费Clash/SSR/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-152229.htm" title="手机科学上网全攻略：解锁网络自由与安全新境界">手机科学上网全攻略：解锁网络自由与安全新境界</a></li>
                         <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-10-clash-meta-github.htm" title="梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月10日22.9M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-vless-node-share.htm" title="顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐">顶级代理服务器 - 9月14日22M/S|免费Shadowrocket/SSR/Clash/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-18-clash-stash-node.htm" title="梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月18日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-152609.htm" title="突破边界：手机科学上网浏览器全方位使用指南与深度解析">突破边界：手机科学上网浏览器全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-150472.htm" title="打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧">打开全球网络大门：PC端免费科学上网软件全面指南与实用技巧</a></li>
+                        <li class="py-2"><a href="/news/article-152960.htm" title="爱的碰撞：解码亲密关系中的冲突艺术">爱的碰撞：解码亲密关系中的冲突艺术</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-free-subscribe-node.htm" title="顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐">顶级代理服务器 - 9月19日18.1M/S|免费Clash/SSR/Shadowrocket/V2ray订阅机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-20-clash-verge-rev-github.htm" title="梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-154045.htm" title="深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略">深度剖析v2rayng：从入门到精通的代理配置与安全共享全攻略</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-15-latest-vless-node.htm" title="顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐">顶级代理服务器 - 9月15日21.4M/S|免费SSR/Clash/V2ray/Shadowrocket订阅机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-clash-stash-node.htm" title="梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-154417.htm" title="安卓V2Ray详细配置指南：开启自由网络之旅">安卓V2Ray详细配置指南：开启自由网络之旅</a></li>
-                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
                     </ul>
     </div>
 </div>
@@ -192,7 +192,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">22</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -221,7 +221,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                            <p>&copy;2025 Best company</p>
+                                                <p>&copy;2025 Best company</p>
                         </div>
                         <div class="col-md-6">
                             <p class="credit pull-right">
